add search functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -109,6 +109,7 @@
 }
 .selected {
     border-left: 3px solid darkcyan;
+    border-right: 3px solid darkcyan;
 }
 .no-image-massage {
     margin: 0rem;
