--- a/app/views/auctions/new.html.erb
+++ b/app/views/auctions/new.html.erb
@@ -1,3 +1,7 @@
-<h1 class="center">add new product for auction</h1>
+<div class="list-group selected">
+  <a href="#" class="list-group-item">
+    <h3 class="list-group-item-heading center">Add new product for auction</h3>
+  </a>
+</div>
 
 <%= render 'form', auction: @auction %>
