--- a/app/views/bids/cart.html.erb
+++ b/app/views/bids/cart.html.erb
@@ -1,7 +1,6 @@
 <div class="list-group">
   <div class="list-group-item selected">
-    <h3 class="list-group-item-heading">Cart | these are the product in which you have done bidding</h3>
-    <p class="list-group-item-text">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.</p>
+    <h4 class="list-group-item-heading">cart, these are the product in which you have done bidding</h4>
   </div>
 </div>
 
