--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
-<h1 class="center"> All Online Auction Users </h1>
-
+<div class="list-group selected">
+  <a href="#" class="list-group-item">
+    <h3 class="list-group-item-heading center"> All Online Auction Users </h3>
+  </a>
+</div>
     
 <% @users.each do |user|%>
     
