--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,9 @@
-<h2 class="center">Edit <%= resource_name.to_s.humanize %></div>
+<div class="list-group selected">
+  <a href="#" class="list-group-item">
+    <h3 class="list-group-item-heading center">Edit <%= resource_name.to_s.humanize %></h3>
+  </a>
+</div>
+
 <div class="row">
     <div class="col-sm-offset-2 col-xs-8">
       <%= form_for(resource, as: resource_name, :html => { method: :put, class: "form-horizontal"}, url: registration_path(resource_name)) do |f| %> 
