--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,9 @@
-<h2 class="center"> Sign up </div>
+<div class="list-group selected">
+  <a href="#" class="list-group-item">
+    <h3 class="list-group-item-heading center"> Sign up </h3>
+  </a>
+</div>
+
 <div class="row" style="margin:3rem;">
     <div class="col-sm-offset-2 col-xs-8">
       <%= form_for(resource, as: resource_name, :html => { class: "form-horizontal"}, url: registration_path(resource_name)) do |f| %> 
