--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,16 +7,16 @@
     <hr style = "border-color:#3f414d">
     <div>
         <a href="https://www.instagram.com/gkc_3/"> 
-            <%= image_tag(asset_url("/assets/instagram.png"), class:"footer-icons") %>
+            <%= image_tag(asset_url("instagram.png"), class:"footer-icons") %>
         </a>
         <a href="https://github.com/gaurav-chaurasia">
-            <%= image_tag(asset_url("/assets/github.png"), class:"footer-icons") %>
+            <%= image_tag(asset_url("github.png"), class:"footer-icons") %>
         </a>
         <a href="https://www.linkedin.com/in/gaurav-chaurasia/">
-            <%= image_tag(asset_url("/assets/linkedin.png"), class:"footer-icons") %>
+            <%= image_tag(asset_url("linkedin.png"), class:"footer-icons") %>
         </a>
         <a href="https://www.facebook.com/profile.php?id=100008466213205">
-            <%= image_tag(asset_url("/assets/facebook.png"), class:"footer-icons") %>
+            <%= image_tag(asset_url("facebook.png"), class:"footer-icons") %>
         </a>
         <span class="footer-item">Copyright &copy;2020 All rights reserved</span>
     </div>
